# LightingPhysics

./: CMakeLists.txt  run
assets/shaders/: default.frag  default.vert  floor_grid.frag  floor_grid.vert
includes/: camera.h  config.h  engine.h  floor_grid.h  mesh.h  object.h  renderer.h  rigidbody.h  shader.h  util.h  window.h
includes/glad/: glad.h
src/: camera.cpp  engine.cpp  floor_grid.cpp  glad.c  main.cpp  mesh.cpp  object.cpp  renderer.cpp  rigidbody.cpp  shader.cpp  util.cpp  window.cpp
